--- a/public/css/style.css
+++ b/public/css/style.css
@@ -545,7 +545,7 @@ h5.view_more {
     margin: 10px 0px 0px;
 }
 img.gomodal_img {
-    width: 100%;
+    width: 450px;
     height: 300px;
     margin-bottom: 10px;
 }
