--- a/public/css/custom.css
+++ b/public/css/custom.css
@@ -119,7 +119,7 @@ Supports Thumbs: true
 
 
 .nivo-caption::after {
-    background: #444 none repeat scroll 0 0;
+    /* background: #444 none repeat scroll 0 0; */
     content: "";
     height: 100%;
     left: 0;
@@ -136,8 +136,9 @@ Supports Thumbs: true
 
 .layer-1-1 h2 {
     color: #fff;
-    font-size: 32px;
-    font-weight: 700;
+    font-size: 42px;
+    font-weight: 500;
+    line-height: 56px;
 }
 
 .layer-1-2 h1 {
@@ -278,15 +279,6 @@ Supports Thumbs: true
         margin: 10px 0;
     }
 
-    .layer-1-1 h2 {
-        font-size: 14px;
-        line-height: 16px;
-    }
-
-    .layer-1-2 h1 {
-        font-size: 14px;
-        line-height: 16px;
-    }
 
     .layer-1-3 a.ready-btn {
         font-size: 12px;
@@ -310,7 +302,7 @@ Supports Thumbs: true
 
     .layer-1-1 h2,
     .layer-1-2 h1 {
-        font-size: 24px;
+        font-size: 20px;
         line-height: 30px;
     }
 }
