--- a/public/css/style.css
+++ b/public/css/style.css
@@ -432,7 +432,7 @@ nav.navbar.navbar-expand-lg.fixed-top.myheader a,nav.navbar.navbar-expand-lg.fix
     
 }
 .header_top ul li {
-    padding: 0px 20px;
+    padding: 0px 30px;
 }
 li.nav-item.social {
     padding: 0px;
@@ -456,6 +456,7 @@ button.btn.donate_btn {
     padding: 10px 15px;
     opacity: 0.8;
     text-transform: uppercase;
+    margin:0px 40px;
     
 }
 button.btn.donate_btn:hover {
@@ -863,7 +864,7 @@ img {
 /* Normal desktop :992px. */
 
 @media (min-width: 992px) and (max-width: 1169px) {
-    .slider-content {
+    .content_center{
         padding: 144px 0;
     }
 }
@@ -900,7 +901,7 @@ img {
         display: none;
     }
 
-    .slider-content {
+    .content_center{
         padding: 46px 0px;
     }
 
@@ -949,7 +950,7 @@ img {
 }
 
 @media only screen and (max-width: 480px) {
-    .slider-content {
+    .content_center{
         padding: 70px 0px;
     }
     #mainfont {
@@ -977,7 +978,7 @@ img {
 
 }
 @media only screen and (min-width: 325px) and (max-width: 460px) {
-    .slider-content {
+    .content_center{
         padding: 70px 0px;
     }
 
@@ -1255,4 +1256,96 @@ a.news_paragraph p {
     padding-top: 15px;
     padding-bottom: 15px;
     transition: background-color ease-in-out 0.3s;
+}
+
+a.main_button {
+    border: 1px solid #fff;
+    border-radius: 30px;
+    color: #fff;
+    cursor: pointer;
+    display: inline-block;
+    font-size: 17px;
+    font-weight: 600;
+    margin-top: 30px;
+    padding: 10px 20px;
+    text-align: center;
+    text-transform: uppercase;
+    transition: all 0.4s ease 0s;
+    z-index: 222;
+    background: #4F9DBD;
+}
+a.main_button:hover {
+    text-decoration: none;
+    background: transparent;
+    border: 1px solid;
+    color: #4F9DBD;
+}
+.content_top {
+    padding: 120px 0px;
+}
+.content_top {
+    padding-top: 10%;
+}
+.content_bottom {
+    padding-top: 50%;
+}
+
+.modal {
+    position: fixed;
+    top: 0;
+    left: 0;
+    display: flex;
+    width: 100%;
+    height: 100vh;
+    justify-content: center;
+    align-items: center;
+    opacity: 0;
+    visibility: hidden;
+}
+
+.modal .content {
+    position: relative;
+    padding: 10px;
+    width: 400px;
+    height: 300px;
+    border-radius: 8px;
+    background-color: #fff;
+    box-shadow: rgba(112, 128, 175, 0.2) 0px 16px 24px 0px;
+    transform: scale(0);
+    transition: transform 300ms cubic-bezier(0.57, 0.21, 0.69, 1.25);
+}
+
+.modal .close {
+    position: absolute;
+    top: 5px;
+    right: 5px;
+    width: 30px;
+    height: 30px;
+    cursor: pointer;
+    border-radius: 8px;
+    background-color: #7080af;
+    clip-path: polygon(0 10%, 10% 0, 50% 40%, 89% 0, 100% 10%, 60% 50%, 100% 90%, 90% 100%, 50% 60%, 10% 100%, 0 89%, 40% 50%);
+}
+
+.modal.open {
+    opacity: 1;
+    visibility: visible;
+}
+
+.modal.open .content {
+    transform: scale(1);
+}
+.flex-container {
+    display: flex;
+}
+.flex-container>div {
+ 
+    margin: 10px;
+    padding: 20px;
+    
+}
+.gm-style-iw.gm-style-iw-c {
+    background: transparent;
+    color: #fff;
+    border: 3px solid;
 }
