--- a/public/css/style.css
+++ b/public/css/style.css
@@ -61,6 +61,9 @@ p{
     cursor: default;
     line-height: 4;
 }
+nav.navbar.navbar-expand-lg.fixed-top.myheader.is_desktop.sticky li.nav-item.dropdown:hover .dropdown-toggle::before {
+    background: #000;
+}
 .dropdown-menu {
     /* position: absolute; */
     /* top: 100%; */
@@ -85,7 +88,7 @@ p{
     left: 42%;
     bottom: 1.3rem;
     width: 70%;
-    height: 0.3rem;
+    height: 3px;
     border-radius: .1rem;
     -webkit-transform: translateX(-50%) scaleX(0);
     transform: translateX(-50%) scaleX(0);
