--- a/public/css/style.css
+++ b/public/css/style.css
@@ -1263,7 +1263,7 @@ a.news_paragraph p {
 }
 
 a.main_button {
-    border: 1px solid #fff;
+    
     border-radius: 30px;
     color: #fff;
     cursor: pointer;
@@ -1282,7 +1282,7 @@ a.main_button:hover {
     text-decoration: none;
     background: transparent;
     border: 1px solid;
-    color: #4F9DBD;
+    color: #fff;
 }
 .content_top {
     padding: 120px 0px;
