--- a/public/css/style.css
+++ b/public/css/style.css
@@ -1291,7 +1291,7 @@ a.main_button:hover {
     padding-top: 10%;
 }
 .content_bottom {
-    padding-top: 50%;
+    padding-bottom: 20%;
 }
 
 .modal {
