--- a/public/css/custom.css
+++ b/public/css/custom.css
@@ -83,29 +83,14 @@ table.dataTable thead .sorting_desc {
 .form-check.is-invalid ~ .invalid-feedback {
     display: block;
 }
-/*
-Skin Name: Nivo Slider Default Theme
-Skin URI: http://nivo.dev7studios.com
-Description: The default skin for the Nivo Slider.
-Version: 1.3
-Author: Gilbert Pellegrom
-Author URI: http://dev7studios.com
-Supports Thumbs: true
-*/
-#slidercontainer {
-    width: 100%;
-    height: 100%;
-    overflow: hidden;
-  
-    top: 0px;
-    left: 0px;
-}
+
 
 
 
 .nivoSlider img {
     position: absolute;
-    max-width: 100%;
+    width:auto;
+    height: 100%;
     top: 0px;
     left: 0px;
 }
@@ -221,15 +206,7 @@ Supports Thumbs: true
     width: 20px;
 }
 
-.nivo-controlNav a:hover,
-.nivo-controlNav a.active {
-    background: #fff none repeat scroll 0 0;
-    border-color: #4F9DBD;
-    -moz-transform: rotate(180deg);
-    -webkit-transform: rotate(180deg);
-    -o-transform: rotate(180deg);
-    -ms-transform: rotate(180deg);
-}
+
 
 /* Normal desktop :992px. */
 
