--- a/public/css/custom.css
+++ b/public/css/custom.css
@@ -1429,3 +1429,87 @@ Main Components
     border-style: solid;
     border-color: transparent;
 }
+
+
+/* Style the tab */
+.tab {
+    float: left;
+    border: 1px solid #ccc;
+    background-color: #f1f1f1;
+    width: 20%;
+
+
+
+}
+
+.tab,
+.lab {
+    min-height: 300px;
+}
+
+.lab {
+    border: 1px solid #ccc;
+    background-color: #f1f1f1;
+    width: 20%;
+    float: right;
+
+}
+
+/* Style the buttons inside the tab */
+.tab button,
+.lab button {
+    display: block;
+    background-color: inherit;
+    color: black;
+    padding: 22px 16px;
+    width: 100%;
+    border: none;
+    outline: none;
+    text-align: left;
+    cursor: pointer;
+    transition: 0.3s;
+    font-size: 17px;
+}
+
+/* Change background color of buttons on hover */
+.tab button:hover {
+    background-color: #ddd;
+}
+
+/* Create an active/current "tab button" class */
+.tab button.active {
+    background-color: #ccc;
+}
+
+/* Style the tab content */
+.tabcontent {
+    float: left;
+    padding: 0px 12px;
+    border: 1px solid #ccc;
+    width: 60%;
+    border-left: none;
+    height: 300px;
+}
+.who .box ul {
+    margin: 0;
+    padding: 0;
+}
+
+.who .box ul li {
+    list-style: none;
+    float: left;
+}
+
+.who .box ul li a {
+    display: block;
+    color: #aaa;
+    margin: 0 10px;
+    font-size: 20px;
+    transition: 0.5s;
+    text-align: center;
+}
+
+.who .box ul li:hover a {
+    color: #e91e63;
+    transform: rotateY(360deg);
+}
