--- a/public/css/style.css
+++ b/public/css/style.css
@@ -1368,3 +1368,55 @@ a.main_button:hover {
 #map{
     display: none;
 }
+img.whoadvisor_photo {
+    width: 350px;
+    float: left;
+    margin-right: 20px;
+}
+.whodescription {
+    padding-top: 40px;
+}
+.middle {
+    transition: .5s ease;
+    opacity: 0;
+    position: absolute;
+    top: 40%;
+    left: 50%;
+    transform: translate(-50%, -50%);
+    -ms-transform: translate(-50%, -50%);
+    text-align: center;
+}
+.img_hover:hover .middle {
+    opacity: 1;
+}
+.play_button i {
+    font-size: 72px;
+    color: red;
+}
+.read_button {
+    font-size: 31px;
+    color: red;
+}
+.content_bottom {
+padding:300px;
+}
+.swiper-button-prev2 ,.swiper-button-next2
+    {
+    color:#4F9DBD;
+}
+.swiper-button-prev1,
+.swiper-button-next1 {
+    color: #fff;
+}
+span.swiper-pagination-bullet {
+    padding: 8px;
+    background: #fff;
+    opacity: 1;
+}
+
+span.swiper-pagination-bullet.swiper-pagination-bullet-active {
+    background: #e9795b;
+}
+.slider_content {
+    position: absolute;
+}
