--- a/public/css/style.css
+++ b/public/css/style.css
@@ -1420,3 +1420,9 @@ span.swiper-pagination-bullet.swiper-pagination-bullet-active {
 .slider_content {
     position: absolute;
 }
+.slider_btn {
+    margin-top: 188%;
+}
+a.text-center.banner_title {
+    margin-bottom: 100%;
+}
