--- a/public/css/style.css
+++ b/public/css/style.css
@@ -1420,3 +1420,9 @@ span.swiper-pagination-bullet.swiper-pagination-bullet-active {
 .slider_content {
     position: absolute;
 }
+.slider_btn {
+    margin-top: 540px;
+}
+h2.sliderfont.text-light.text-center {
+    margin-top: -378px;
+}
