--- a/public/css/style.css
+++ b/public/css/style.css
@@ -1448,3 +1448,6 @@ span.swiper-pagination-bullet.swiper-pagination-bullet-active {
     top: 9%;
     padding: 0px 40px;
 }
+a#video_link {
+    margin-top: 524px;
+}
