--- a/public/css/custom.css
+++ b/public/css/custom.css
@@ -1419,34 +1419,22 @@ Main Components
 /* Style the tab */
 .tab {
     float: left;
-    border: 1px solid #ccc;
-    background-color: #f1f1f1;
     width: 20%;
-
-
-
 }
-
-.tab,
 .lab {
-    min-height: 300px;
-}
-
-.lab {
-    border: 1px solid #ccc;
-    background-color: #f1f1f1;
+    float: left;
     width: 20%;
-    float: right;
-
 }
+
+
 
 /* Style the buttons inside the tab */
 .tab button,
 .lab button {
     display: block;
     background-color: inherit;
-    color: black;
-    padding: 22px 16px;
+    color:#4F9DBD;
+    padding: 22px 0px;
     width: 100%;
     border: none;
     outline: none;
@@ -1457,15 +1445,23 @@ Main Components
 }
 
 /* Change background color of buttons on hover */
-.tab button:hover {
-    background-color: #ddd;
+.tab button:hover,
+.lab button:hover {
+  color: #fff;
 }
+
 
 /* Create an active/current "tab button" class */
-.tab button.active {
-    background-color: #ccc;
+.tab button.active,
+.lab button.active {
+   color: #fff;
 }
-
+.lab{
+    text-align: right;
+}
+.lab button {
+    text-align: right;
+}
 /* Style the tab content */
 .tabcontent {
     float: left;
@@ -1526,3 +1522,7 @@ Main Components
      width: 60%;
     
  }
+.whodescription p {
+    font-size: 16px;
+    text-align: justify;
+}
