--- a/public/css/style.css
+++ b/public/css/style.css
@@ -546,7 +546,7 @@ li.nav-item.social a {
     font-family: Fjalla One, Impact, sans-serif;
 }
 h4.text-center {
-    border-top: 2px solid red;
+    border-top: 2px solid #ffc107;
     display: inline-block;
     padding-top: 10px;
     font-size: 28px;
@@ -1416,11 +1416,11 @@ img.whoadvisor_photo {
 }
 .play_button i {
     font-size: 72px;
-    color: red;
+    color: #ffc107;
 }
 .read_button {
     font-size: 31px;
-    color: red;
+    color: #ffc107;
 }
 .content_bottom {
 padding:300px;
@@ -1440,7 +1440,7 @@ span.swiper-pagination-bullet {
 }
 
 span.swiper-pagination-bullet.swiper-pagination-bullet-active {
-    background: #e9795b;
+    background: #ffc107;
 }
 .slider_content {
     position: absolute;
