--- a/public/css/custom.css
+++ b/public/css/custom.css
@@ -817,7 +817,7 @@ h3 {
     display: none;
 }
 .bg_black{
-    background-color: #001c57;
+    background-color: #001540;
 }
 .timeline-horizontal .timeline-item .timeline-badge {
     top: auto;
