--- a/public/css/style.css
+++ b/public/css/style.css
@@ -1546,11 +1546,9 @@ section#exhibiton {
 .social a {
     font-size: 25px;
     margin-right: 10px;
-    color: #4F9DBD;
+    color: #000;
 }
-.social a{
-    color:#ff643a;
-}
+
 .social_share a {
     font-size: 27px;
     display: block;
@@ -1560,4 +1558,12 @@ section#exhibiton {
 }
 .social_share a {
     color: #4F9DBD;
+}
+.who-we-social a i {
+    font-size: 30px;
+    color: #4F9DBD;
+}
+.who-we-social a i:hover {
+    
+    color: #ff643a;
 }
