--- a/public/css/style.css
+++ b/public/css/style.css
@@ -696,7 +696,7 @@ a.news_paragraph:hover,
 }
 .new_second_text{
         position: absolute;
-        bottom: 8px;
+        bottom: 20px;
         left: 15px;
         color: #fff;
 }
@@ -706,6 +706,7 @@ a.news_paragraph:hover,
     position: relative;
     background: #fff;
     padding: 10px;
+    min-height: 105px;
 }
 img{
     max-width: 100%;
@@ -727,7 +728,7 @@ img{
     transform: scale(1.1);
 }
 .latest_news.flex-column.flex-md-row {
-    min-height: 110px;
+    min-height: 118px;
 }
 
 .advisor img {
@@ -1573,4 +1574,32 @@ section#exhibiton {
 }
 .who-we-social a {
     margin-right: 10px;
+}
+.placeholder {
+    background-color: #f6f6f6;
+    background-size: cover;
+    background-repeat: no-repeat;
+    position: relative;
+    overflow: hidden;
+}
+
+.placeholder img {
+    position: absolute;
+    opacity: 0;
+    top: 0;
+    left: 0;
+    width: 100%;
+    height: 100%;
+    transition: opacity 1s linear;
+}
+
+.placeholder img.loaded {
+    opacity: 1;
+}
+
+.img-small {
+    filter: blur(50px);
+}
+.latest_news.flex-column.flex-md-row figure {
+    float: left;
 }
