--- a/public/css/style.css
+++ b/public/css/style.css
@@ -1576,7 +1576,7 @@ section#exhibiton {
     margin-right: 10px;
 }
 .placeholder {
-    background-color: #f6f6f6;
+    background-color: #807e7e;
     background-size: cover;
     background-repeat: no-repeat;
     position: relative;
