--- a/public/css/style.css
+++ b/public/css/style.css
@@ -699,6 +699,7 @@ a.news_paragraph:hover,
         bottom: 20px;
         left: 15px;
         color: #fff;
+        z-index: 999;
 }
 .new_third_text {
     text-align: left;
@@ -1575,31 +1576,6 @@ section#exhibiton {
 .who-we-social a {
     margin-right: 10px;
 }
-.placeholder {
-    background-color: #807e7e;
-    background-size: cover;
-    background-repeat: no-repeat;
-    position: relative;
-    overflow: hidden;
-}
-
-.placeholder img {
-    position: absolute;
-    opacity: 0;
-    top: 0;
-    left: 0;
-    width: 100%;
-    height: 100%;
-    transition: opacity 1s linear;
-}
-
-.placeholder img.loaded {
-    opacity: 1;
-}
-
-.img-small {
-    filter: blur(50px);
-}
 .latest_news.flex-column.flex-md-row figure {
     float: left;
 }
@@ -1733,4 +1709,9 @@ left: -30px;
     -webkit-transform: scale(1);
     -ms-transform: scale(1);
     transform: scale(1);
+}
+.latest_news figure {
+    width: 100px;
+    height: 100px;
+    margin-right: 10px;
 }
