--- a/public/css/style.css
+++ b/public/css/style.css
@@ -1715,3 +1715,9 @@ left: -30px;
     height: 100px;
     margin-right: 10px;
 }
+.ts-resize {
+    width: 100%;
+}
+.granttimelime{
+    z-index: 999;
+}
