--- a/public/css/style.css
+++ b/public/css/style.css
@@ -1709,3 +1709,9 @@ img.progressiveMedia-image.thumb.lazyloaded {
     padding: 0px 60px;
     position: relative;
 }
+.gallerynav {
+    top: 78%;
+}
+button.pswp__button.pswp__button--buy {
+    background: #fff;
+}
