--- a/public/css/custom.css
+++ b/public/css/custom.css
@@ -1356,7 +1356,7 @@ Main Components
 
 
 
-.overlay {
+.voverlay {
     position: fixed;
     top: 0px;
     left: 0px;
@@ -1369,7 +1369,7 @@ Main Components
 }
 
 
-.close {
+.vclose {
     position: fixed;
     top: 30px;
     right: 30px;
@@ -1380,7 +1380,7 @@ Main Components
     cursor: pointer;
 }
 
-.main-vid-box {
+.vmain-vid-box {
     position: fixed;
     width: 100%;
     height: 100vh;
@@ -1391,7 +1391,7 @@ Main Components
 }
 
 
-.videoWrapper {
+.vvideoWrapper {
     position: relative;
     z-index: 999;
     background-color: #000;
@@ -1400,7 +1400,7 @@ Main Components
     margin: 0 auto;
 }
 
-.videoWrapper video {
+.vvideoWrapper video {
     position: relative;
     top: 0;
     left: 0;
