--- a/public/css/style.css
+++ b/public/css/style.css
@@ -1760,6 +1760,7 @@ form.form-inline {
     line-height: 75px;
     font-size: 30px;
     border-radius: 50%;
+    overflow: hidden;
 }
 .flex_container div>img {
     border-radius: 50%;
@@ -1819,12 +1820,9 @@ form.form-inline {
 }
 
 iframe {
-    position: absolute;
-    top: 0;
-    left: 0;
+
     width: 100%;
-    height: 100%;
-    opacity: 1 !important;
+  
 }
 
 video {
@@ -1842,4 +1840,7 @@ video {
 }
 .swiper-slide.swiper-slide-duplicate.swiper-slide-active {
     z-index: 999999999;
+}
+.latest_news.single.flex-column.flex-md-row a {
+    color: #000;
 }
