--- a/public/css/custom.css
+++ b/public/css/custom.css
@@ -100,6 +100,7 @@ table.dataTable thead .sorting_desc {
     position: relative;
     text-align: center;
     min-height: 850px;
+    width: 100%;
 }
 
 
