--- a/public/css/style.css
+++ b/public/css/style.css
@@ -733,7 +733,11 @@ img{
     transition: all 0.5s ease;
 }
 .post-thumb.ts-resize a:hover img {
-    transform: scale(1.1);
+     -webkit-transform: scale(1.1);
+     -moz-transform: scale(1.1);
+     -o-transform: scale(1.1);
+     -ms-transform: scale(1.1);
+     transform: scale(1.1);
 }
 .latest_news.flex-column.flex-md-row {
     min-height: 118px;
